# my-tooling

./: .clang-format  README.md
autohotkey/: README.md  macropad.ahk
environment/linux/: env.sh
environment/windows/: env.bat  env_notes.txt  launcher.bat
fonts/CommitMonoMasonSpeckV143/: custom-settings.json  license.txt
nixos/templates/: configuration.nix
nvim/: init.lua  lazy-lock.json
nvim/lsp/: jails.lua  lua_ls.lua  nixd.lua
nvim/lua/: bookmarks.lua  cache.lua  fff_search.lua  keymap_base.lua  lsp.lua  portable_environment.lua  project_commands.lua  safety.lua  utils.lua
pitchfork layout template/pitchfork/: CMakeLists.txt
pitchfork layout template/pitchfork/src/: Component.cpp  Component.hpp  main.cpp
pitchfork layout template/pitchfork/src/namespace/: SubComponent.cpp  SubComponent.hpp  SubComponent.test.cpp
vscode/: copy_back_settings_windows.bat  copy_settings_windows.bat  keybindings.json  readme.md  settings.json
windows/: macropad.ahk
